--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link btn" href="#">NEWS</a>
+        <a class="nav-link btn" onclick="news()">NEWS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn-mag" href="magzine.html">MAGAZINES</a>
+        <a class="nav-link btn-mag" onclick="magazine()">MAGAZINES</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn" onclick="video()" >VIDEOS</a>
