--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link btn" onclick="news()">NEWS</a>
+        <a class="nav-link btn news" onclick="news()">NEWS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn-mag" onclick="magazine()">MAGAZINES</a>
+        <a class="nav-link btn mag" onclick="magazine()">MAGAZINES</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn" onclick="video()" >VIDEOS</a>
@@ -69,7 +69,7 @@
   </div>  
        <ul class="nav navbar-nav topnav-right">
         <li class="nav-item">
-        <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
+        <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn">Login</a>
       </li>
     </ul> 
 </nav>
