--- a/magazine.html
+++ b/magazine.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="mag.js"></script>
+  <script src="authenticate.js"></script>
   <style>
   .fakeimg {
     height: 300px;
@@ -58,23 +61,23 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link btn" href="#">NEWS</a>
+        <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn-mag" href="magzine.html">MAGAZINES</a>
+        <a class="nav-link btn" onclick="magazine()"><i class="fas fa-book-reader"></i> E-MAGAZINE</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn" onclick="video()" >VIDEOS</a>
-      </li>   
+        <a class="nav-link btn" onclick="video()" ><i class="fas fa-play"></i> VIDEOS</a>
+      </li>  
        
     </ul>
   </div>  
-       <ul class="nav navbar-nav topnav-right">
+       <!-- <ul class="nav navbar-nav topnav-right">
         <li class="nav-item">
-        <a class="nav-link btn-mag btn" onclick="authenticate()">Login</a>
+        <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
       </li>
-    </ul>
-
+    </ul>  -->
+</nav>
 </nav>
 
 
@@ -134,6 +137,4 @@
 	});
 });
 </script>
-
-<script src="base.js"></script>
 </html>
