--- a/magazine.html
+++ b/magazine.html
@@ -12,6 +12,10 @@
   <script src="mag.js"></script>
   <script src="authenticate.js"></script>
   <style>
+    .navbar{
+      background-color: #1A322B !important;
+      
+    }
   .fakeimg {
     height: 300px;
     width: 500px;
@@ -54,7 +58,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" style="padding-top: 10px;"><img src="images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -72,11 +76,7 @@
        
     </ul>
   </div>  
-       <!-- <ul class="nav navbar-nav topnav-right">
-        <li class="nav-item">
-        <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
-      </li>
-    </ul>  -->
+
 </nav>
 </nav>
 
@@ -84,27 +84,7 @@
 <div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-2">
-      <h2>About Me</h2>
-      <!-- <h5>Photo of me:</h5>
-      <div class="fakeimg2" >Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p> -->
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
+ 
     </div>
     <br>
     <div class="col-sm-8 news-add" style="padding-left: 5%;" >
