--- a/news.html
+++ b/news.html
@@ -22,9 +22,13 @@
   
 
   <style>
+    .navbar{
+      background-color: #1A322B !important;
+      
+    }
    .content{
     font-family: 'Bitter', serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: justify;
    }
   .fakeimg {
@@ -54,7 +58,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" style="padding-top: 10px;"><img src="images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -172,3 +176,7 @@
 
 </body>
 </html>
+
+
+
+
