--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     
     </script>
   <style>
+        .navbar{
+      background-color: #1A322B !important;
+      
+    }
   .fakeimg {
     height: 300px;
     width: 500px;
@@ -46,7 +50,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#"><img src="images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
