--- a/magazine.html
+++ b/magazine.html
@@ -87,7 +87,7 @@
  
     </div>
     <br>
-    <div class="col-sm-8 news-add" style="padding-left: 5%;" >
+    <div class="col-sm-8" style="padding-left: 5%;" >
         <div class="row1">
             
             <!-- <div class="column">
@@ -117,4 +117,5 @@
 	});
 });
 </script>
+<script src="base.js"></script>
 </html>
