--- a/news.html
+++ b/news.html
@@ -22,6 +22,14 @@
   
 
   <style>
+    .responsive {
+  width: 100%;
+}
+@media screen and (max-width: 500px) {
+  .resp {
+    width: 100%;
+  }
+}
     .navbar{
       background-color: #1A322B !important;
       
@@ -54,7 +62,7 @@
 <body style="padding-right: 0px;">
 
 <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
-  <img src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
+  <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
