--- a/magazine.html
+++ b/magazine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>organiser</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -12,6 +12,10 @@
   <script src="mag.js"></script>
   <script src="authenticate.js"></script>
   <style>
+    @media screen and (max-width: 500px) {
+  .resp {
+    width: 100%;
+  }}
     .navbar{
       background-color: #1A322B !important;
       
@@ -54,7 +58,7 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
-  <img src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
+  <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
