--- a/news.html
+++ b/news.html
@@ -66,7 +66,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" style="padding-top: 10px;"><img src="images/org.png"></a>
+  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -138,7 +138,7 @@
     </div>
   
 
-
+<hr>
     <footer class="footer">
       <div class="container">
           <div class="row justify-content-center">             
