--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#"><img src="images/org.png"></a>
+  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -112,43 +112,49 @@
   </div>
 
 
-<!-- <div class="container" style="margin-top:30px">
- 
-    <br>
-   
-      <h2>TITLE HEADING</h2>
 
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">
-          <img src = "https://images.indianexpress.com/2020/12/Monolith-at-Thaltej.jpg" height="100%" width="100%">
-      </div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br> 
-    </div>
+<hr>
+<footer class="footer">
+  <div class="container">
+      <div class="row justify-content-center">             
+          <div class="col-sm-4">
+              <h5>Links</h5>
+              <ul class="list-unstyled">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Menu</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </div>
+          <div class="col-sm-3">
+              <h5>Our Address</h5>
+              <address>
+            121, Clear Water Bay Road<br>
+            Clear Water Bay, Kowloon<br>
+            HONG KONG<br>
+            Tel.: +852 1234 5678<br>
+            Fax: +852 8765 4321<br>
+            Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+         </address>
+          </div>
+          <div class="col-12 col-sm-4 align-self-center">
+              <div class="text-center">
+                  <a class="btn btn-social-icon" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-0 fa-lg"></i></a>
+              </div>
+          </div>
+     </div>
+     <div class="row justify-content-center">             
+          <div class="col-auto">
+              <p>© Copyright 2018 Ristorante Con Fusion</p>
+          </div>
+     </div>
   </div>
-</div>-->
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div>
+</footer>
 <!-- footer -->
 
 </body>
