--- a/magazine.html
+++ b/magazine.html
@@ -62,7 +62,7 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" style="padding-top: 10px;"><img src="images/org.png"></a>
+  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -108,10 +108,50 @@
   </div>
 </div>
 
-<!-- <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div> -->
+
 <!-- footer -->
+<hr>
+<footer class="footer">
+  <div class="container">
+      <div class="row justify-content-center">             
+          <div class="col-sm-4">
+              <h5>Links</h5>
+              <ul class="list-unstyled">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Menu</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </div>
+          <div class="col-sm-3">
+              <h5>Our Address</h5>
+              <address>
+            121, Clear Water Bay Road<br>
+            Clear Water Bay, Kowloon<br>
+            HONG KONG<br>
+            Tel.: +852 1234 5678<br>
+            Fax: +852 8765 4321<br>
+            Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+         </address>
+          </div>
+          <div class="col-12 col-sm-4 align-self-center">
+              <div class="text-center">
+                  <a class="btn btn-social-icon" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+                  <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-0 fa-lg"></i></a>
+              </div>
+          </div>
+     </div>
+     <div class="row justify-content-center">             
+          <div class="col-auto">
+              <p>© Copyright 2018 Ristorante Con Fusion</p>
+          </div>
+     </div>
+  </div>
+</footer>
 
 </body>
 <script>
