--- a/video.html
+++ b/video.html
@@ -21,6 +21,11 @@
   
 
   <style>
+    @media screen and (max-width: 500px) {
+  .resp {
+    width: 100%;
+  }
+}
     .navbar{
       background-color: #1A322B !important;
       
@@ -46,7 +51,7 @@
 <body style="padding-right: 0px;">
 
 <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
-  <img src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
+  <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
