--- a/video.html
+++ b/video.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="authenticate.js"></script>
+  <script src="video.js"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -68,7 +69,7 @@
         <a class="nav-link btn" onclick="magazine()"><i class="fas fa-book-reader"></i> E-MAGAZINE</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn" onclick="video()" ><i class="fas fa-play"></i> VIDEOS</a>
+        <a class="nav-link btn" onclick="vid()" ><i class="fas fa-play"></i> VIDEOS</a>
       </li>   
        
     </ul>
