--- a/magazine.html
+++ b/magazine.html
@@ -75,7 +75,7 @@
         <a class="nav-link btn" onclick="magazine()"><i class="fas fa-book-reader"></i> E-MAGAZINE</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn" onclick="video()" ><i class="fas fa-play"></i> VIDEOS</a>
+        <a class="nav-link btn" onclick="vid()" ><i class="fas fa-play"></i> VIDEOS</a>
       </li>  
        
     </ul>
