--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>  
        <ul class="nav navbar-nav topnav-right" id="collapsibleNavbar">
         <li class="nav-item">
-        <a data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
+        <a data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a>
       </li>
     </ul> 
 </nav>
