--- a/magazine.html
+++ b/magazine.html
@@ -5,10 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="mag.js"></script>
   <script src="authenticate.js"></script>
   <style>
@@ -107,41 +114,42 @@
     </div>
   </div>
 </div>
+</div>
 
 
 <!-- footer -->
 <hr>
+<!-- footer -->
 <footer class="footer">
   <div class="container">
       <div class="row justify-content-center">             
-          <div class="col-sm-4">
-              <h5>Links</h5>
+          <div class="col-sm-4 text-center">
+              <h3 class="text-center font-weight-bold" style="color: #cc8b08">Important Links</h3>
               <ul class="list-unstyled">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Menu</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a class="col" href="#">About us</a></li>
+                  <hr class="my-3">
+                  <li><a class="col" href="#">Privacy</a></li>
+                  <hr class="my-3">
+                  <li><a class="col" href="#">Sitemap</a></li>
+                  <hr class="my-3">
+                  <li><a class="col" href="#">Contact us</a></li>
               </ul>
           </div>
           <div class="col-sm-3">
-              <h5>Our Address</h5>
-              <address>
-            121, Clear Water Bay Road<br>
-            Clear Water Bay, Kowloon<br>
-            HONG KONG<br>
-            Tel.: +852 1234 5678<br>
-            Fax: +852 8765 4321<br>
-            Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+              <h3 class="text-center font-weight-bold" style="color: #cc8b08">About Organiser</h3>
+              <address class="col">
+Organiser - Voice of the nation. The oldest and most widely circulated nationalist English weekly of Bharat. Spreading Cultural Nationalist Views which goes beyond News.
+          Email: <a href="mailto:editor@organiser.org">editor@organiser.org</a>
          </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
               <div class="text-center">
-                  <a class="btn btn-social-icon" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-                  <a class="btn btn-social-icon" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-                  <a class="btn btn-social-icon" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
-                  <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                  <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-                  <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-0 fa-lg"></i></a>
+
+                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.facebook.com/eOrganiser/"><i class="fa fa-facebook fa-lg"></i></a> 
+                  <hr>
+                  <a class="btn btn-social-icon" style="color:#888f96;"  href="https://twitter.com/eOrganiser"><i class="fa fa-twitter fa-lg"></i></a>
+                  <hr>
+                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.youtube.com/c/eOrganiser"><i class="fa fa-youtube fa-lg"></i></a>
               </div>
           </div>
      </div>
@@ -152,7 +160,7 @@
      </div>
   </div>
 </footer>
-
+<!-- footer -->
 </body>
 <script>
     $(document).ready(function() {
