--- a/news.html
+++ b/news.html
@@ -139,47 +139,47 @@
   
 
 <hr>
-    <footer class="footer">
-      <div class="container">
-          <div class="row justify-content-center">             
-              <div class="col-sm-4">
-                  <h5>Links</h5>
-                  <ul class="list-unstyled">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Menu</a></li>
-                      <li><a href="#">Contact</a></li>
-                  </ul>
+<!-- footer -->
+<footer class="footer">
+  <div class="container">
+      <div class="row justify-content-center">             
+          <div class="col-sm-4 text-center">
+              <h3 class="text-center font-weight-bold" style="color: #cc8b08">Important Links</h3>
+              <ul class="list-unstyled">
+                  <li><a class="col" href="#">About us</a></li>
+                  <hr class="my-3">
+                  <li><a class="col" href="#">Privacy</a></li>
+                  <hr class="my-3">
+                  <li><a class="col" href="#">Sitemap</a></li>
+                  <hr class="my-3">
+                  <li><a class="col" href="#">Contact us</a></li>
+              </ul>
+          </div>
+          <div class="col-sm-3">
+              <h3 class="text-center font-weight-bold" style="color: #cc8b08">About Organiser</h3>
+              <address class="col">
+Organiser - Voice of the nation. The oldest and most widely circulated nationalist English weekly of Bharat. Spreading Cultural Nationalist Views which goes beyond News.
+          Email: <a href="mailto:editor@organiser.org">editor@organiser.org</a>
+         </address>
+          </div>
+          <div class="col-12 col-sm-4 align-self-center">
+              <div class="text-center">
+
+                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.facebook.com/eOrganiser/"><i class="fa fa-facebook fa-lg"></i></a> 
+                  <hr>
+                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://twitter.com/eOrganiser"><i class="fa fa-twitter fa-lg"></i></a>
+                  <hr>
+                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.youtube.com/c/eOrganiser"><i class="fa fa-youtube fa-lg"></i></a>
               </div>
-              <div class="col-sm-3">
-                  <h5>Our Address</h5>
-                  <address>
-                121, Clear Water Bay Road<br>
-                Clear Water Bay, Kowloon<br>
-                HONG KONG<br>
-                Tel.: +852 1234 5678<br>
-                Fax: +852 8765 4321<br>
-                Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
-             </address>
-              </div>
-              <div class="col-12 col-sm-4 align-self-center">
-                  <div class="text-center">
-                      <a class="btn btn-social-icon" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-                      <a class="btn btn-social-icon" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-                      <a class="btn btn-social-icon" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
-                      <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                      <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-                      <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-0 fa-lg"></i></a>
-                  </div>
-              </div>
-         </div>
-         <div class="row justify-content-center">             
-              <div class="col-auto">
-                  <p>© Copyright 2018 Ristorante Con Fusion</p>
-              </div>
-         </div>
-      </div>
-  </footer>
+          </div>
+     </div>
+     <div class="row justify-content-center">             
+          <div class="col-auto">
+              <p>© Copyright 2018 Ristorante Con Fusion</p>
+          </div>
+     </div>
+  </div>
+</footer>
 <!-- footer -->
 
 </body>
