--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital@1&display=swap" rel="stylesheet">
+  
   <script>
     window.onload=function(){
       document.getElementById("button").style.display='none';
@@ -27,6 +33,9 @@
     
     </script>
   <style>
+        .responsive {
+  width: 100%;
+}
   @media screen and (max-width: 500px) {
   .resp {
     width: 100%;
@@ -36,6 +45,15 @@
       background-color: #1A322B !important;
       
     }
+    .fontt{
+    font-family: 'Abril Fatface', cursive;
+    font-size: 3rem;
+  }
+    .content{
+    font-family: 'Bitter', serif;
+    font-size: 1.5rem;
+    text-align: justify;
+   }
   .fakeimg {
     height: 300px;
     width: 500px;
