--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     window.onload=function(){
       document.getElementById("button").style.display='none';
       document.getElementById("otp1").style.display='none';
-
-    }
-    window.onload = newsHome();
+      newsHome();
+}
+    // window.onload = 
     
     </script>
   <style>
@@ -70,7 +70,7 @@
   }
   </style>
 </head>
-<body style="padding-right: 0px;" onload="newHome">
+<body style="padding-right: 0px;">
 
 <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
   <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
@@ -135,49 +135,6 @@
   </div>
 </div>
 </div>
-
-<!-- image slider start-->
-<!-- <div class="slider">
-  <div class="slides"> -->
-    <!--radio buttons start-->
-    <!-- <input type="radio" name="radio-btn" id="radio1">
-    <input type="radio" name="radio-btn" id="radio2">
-    <input type="radio" name="radio-btn" id="radio3">
-    <input type="radio" name="radio-btn" id="radio4"> -->
-    <!--radio buttons end-->
-    <!--slide images start-->
-    <!-- <div class="slide first">
-      <img src="images/1.jpg" alt="">
-    </div>
-    <div class="slide">
-      <img src="images/2.jpg" alt="">
-    </div>
-    <div class="slide">
-      <img src="images/3.jpg" alt="">
-    </div>
-    <div class="slide">
-      <img src="images/4.jpg" alt="">
-    </div> -->
-    <!--slide images end-->
-    <!--automatic navigation start-->
-    <!-- <div class="navigation-auto">
-      <div class="auto-btn1"></div>
-      <div class="auto-btn2"></div>
-      <div class="auto-btn3"></div>
-      <div class="auto-btn4"></div>
-    </div> -->
-    <!--automatic navigation end-->
-  </div>
-  <!--manual navigation start-->
-  <!-- <div class="navigation-manual">
-    <label for="radio1" class="manual-btn"></label>
-    <label for="radio2" class="manual-btn"></label>
-    <label for="radio3" class="manual-btn"></label>
-    <label for="radio4" class="manual-btn"></label>
-  </div> -->
-  <!--manual navigation end-->
-<!-- </div> -->
-<!--image slider end -->
 
 <div class="container" style="margin-top:30px">
   
