--- a/video.html
+++ b/video.html
@@ -65,6 +65,11 @@
        
     </ul>
   </div>  
+  <ul class="nav navbar-nav topnav-right" id="collapsibleNavbar">
+    <li class="nav-item">
+    <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
+  </li>
+</ul> 
        <!-- <ul class="nav navbar-nav topnav-right">
         <li class="nav-item">
         <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
