magzine logout button

--- a/magazine.html
+++ b/magazine.html
@@ -87,6 +87,11 @@
        
     </ul>
   </div>  
+  <ul class="nav navbar-nav topnav-right" id="collapsibleNavbar">
+    <li class="nav-item">
+    <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
+  </li>
+</ul> 
 
 </nav>
 </nav>
