--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/loader.css"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
@@ -30,6 +31,7 @@
       newsHome();
       // window.localStorage.setItem("loginShow", "true");
       loginShow();
+      // document.getElementById("wrapper").style.display='block';
 }
     
     
@@ -104,6 +106,9 @@
       </li>
     </ul> 
 </nav>
+<!-- <div class="loader-wrapper" id="wrapper">
+  <span class="loader"><span class="loader-inner"></span></span>
+</div> -->
  <div class="modal-content none">
          <div class="modal fade" id="myModal" role="dialog">
              <div class="modal-dialog">
