Updated news.js authentication, home.js api url, reduced the length of description in videos

--- a/news.html
+++ b/news.html
@@ -88,7 +88,7 @@
   </div> 
   <ul class="nav navbar-nav topnav-right" id="collapsibleNavbar">
     <li class="nav-item">
-    <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a>
+    <!-- <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a> -->
     <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
   </li>
 </ul>  
@@ -99,17 +99,17 @@
     </ul>  -->
 </nav>
 
-<div class="modal-content none">
+<!-- <div class="modal-content none">
   <div class="modal fade" id="myModal" role="dialog">
       <div class="modal-dialog">
-<!-- Modal content-->
-<div class="modal-content">
+ Modal content-->
+<!-- <div class="modal-content">
  <div class="modal-header">
    <h4 class="modal-title">Login </h4>
    <button type="button" class="close" data-dismiss="modal">&times;</button>
-</div>
+</div> --> 
  
-<div class="modal-body">
+<!-- <div class="modal-body">
    <div class="form-row">
      <div class="form-group col-sm-6">
     <label class="sr-only" for="exampleInputEmail3">Phone Number</label>
@@ -131,7 +131,7 @@
 </div>
 </div>
 </div>
-</div>
+</div> -->
  <!-- <div class="modal-content none">
          <div class="modal fade" id="myModal" role="dialog">
              <div class="modal-dialog">
