--- a/news.html
+++ b/news.html
@@ -20,6 +20,7 @@
 <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bitter:ital@1&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/loader.css">
   
 
   <style>
@@ -62,9 +63,9 @@
 </head>
 <body style="padding-right: 0px;">
 
-<div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
+<!-- <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
   <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
-</div>
+</div> -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="images/org.png"></a>
@@ -98,6 +99,18 @@
       </li>
     </ul>  -->
 </nav>
+
+<!-- loader -->
+
+
+<div class="loader-wrapper" id="loader">
+  <span class="loader" style="
+margin-top: 35%;
+margin-left: 50%;    height: 31px;
+width: 31px;"><span class="loader-inner"></span></span>
+</div>
+
+<!-- loader -->
 
 <!-- <div class="modal-content none">
   <div class="modal fade" id="myModal" role="dialog">
