--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="authenticate.js"></script>
   <script src="home.js"></script>
   <script src="number.js"></script>
+ 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -17,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
-  <!-- <link rel="stylesheet" href="css/loader.css"> -->
+  <link rel="stylesheet" href="css/loader.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
@@ -28,6 +29,7 @@
     window.onload=function(){
       document.getElementById("button").style.display='none';
       document.getElementById("otp1").style.display='none';
+      document.getElementById("loader").style.display='block';
       newsHome();
       // window.localStorage.setItem("loginShow", "true");
       loginShow();
@@ -76,9 +78,9 @@
 </head>
 <body style="padding-right: 0px;">
 
-<div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
+<!-- <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
   <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
-</div>
+</div> -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="images/org.png"></a>
@@ -106,9 +108,18 @@
       </li>
     </ul> 
 </nav>
-<!-- <div class="loader-wrapper" id="wrapper">
-  <span class="loader"><span class="loader-inner"></span></span>
-</div> -->
+<!-- loader -->
+
+
+<div class="loader-wrapper" id="loader">
+  <span class="loader" style="
+margin-top: 35%;
+margin-left: 50%;    height: 31px;
+width: 31px;"><span class="loader-inner"></span></span>
+</div>
+
+<!-- loader -->
+
  <div class="modal-content none">
          <div class="modal fade" id="myModal" role="dialog">
              <div class="modal-dialog">
