--- a/magazine.html
+++ b/magazine.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <script src="mag.js"></script>
   <script src="authenticate.js"></script>
+  <link rel="stylesheet" href="css/loader.css">
   <style>
     @media screen and (max-width: 500px) {
   .resp {
@@ -75,9 +76,9 @@
 </head>
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
+<!-- <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
   <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
-</div>
+</div> -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="images/org.png"></a>
@@ -106,6 +107,19 @@
 
 </nav>
 </nav>
+
+<!-- loader -->
+
+
+<div class="loader-wrapper" id="loader">
+  <span class="loader" style="
+margin-top: 35%;
+margin-left: 50%;    height: 31px;
+width: 31px;"><span class="loader-inner"></span></span>
+</div>
+
+<!-- loader -->
+
 
 
 <div class="container" style="margin-top:30px">
