--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="authenticate.js"></script>
   <script src="home.js"></script>
   <script src="number.js"></script>
- 
+  <script src="baseUrl.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
