--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="news.js"></script>
   <script src="number.js"></script>
+  <script src="baseUrl.js"></script>
   <script src="authenticate.js"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
