--- a/html/index.html
+++ b/html/index.html
@@ -158,7 +158,7 @@ width: 31px;"><span class="loader-inner"></span></span>
   
     
  
-  <div class="row news-add card">
+  <div class="row news-add">
     
    
   </div>
