--- a/html/newsview.html
+++ b/html/newsview.html
@@ -106,12 +106,12 @@
 <!-- loader -->
 
 
-<!-- <div class="loader-wrapper" id="loader">
+<div class="loader-wrapper" id="loader">
   <span class="loader" style="
 margin-top: 35%;
 margin-left: 50%;    height: 31px;
 width: 31px;"><span class="loader-inner"></span></span>
-</div> -->
+</div>
 
 <!-- loader -->
 
@@ -204,7 +204,11 @@ width: 31px;"><span class="loader-inner"></span></span>
 </div>
 </div>
 
-
+<script>
+  setTimeout(function(){
+                document.getElementById("loader").style.display='none';
+            }, 3000)
+</script>
 
 
 
