Removed html folder

--- a/pdfview1.html
+++ b/pdfview1.html
@@ -25,5 +25,5 @@
       });
     });
   </script>
-  <script type="text/javascript" src="../js/viewer.min.js?0e91f239215aff5c29b7"></script></body>
+  <script type="text/javascript" src="./js/viewer.min.js?0e91f239215aff5c29b7"></script></body>
 </html>
