--- a/html/news.html
+++ b/html/news.html
@@ -18,10 +18,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bitter:ital@1&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/loader.css">
   <script>
       window.onload=function(){
@@ -44,27 +43,19 @@
       
     }
    .content{
-    font-family: 'Bitter', serif;
-    font-size: 1.5rem;
+    font-family: 'Baloo 2', cursive;
+    font-size: 1.7rem;
     text-align: justify;
    }
-  .fakeimg {
-    height: 300px;
-    width: 500px;
-    background: #aaa;
-  }
-  .fakeimg2 {
-    height: 200px;
-    width: 250px;
-    background: #aaa;
-  }
   .body
   {
     padding-right: 0px;
   }
   .fontt{
-    font-family: 'Abril Fatface', cursive;
-    font-size: 3rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 4rem;
+    color: #191816;
+    font-weight: 700;
   }
   </style>
 </head>
