--- a/html/newsview.html
+++ b/html/newsview.html
@@ -20,7 +20,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/loader.css">
   
@@ -50,7 +50,8 @@
    }
    .fontt{
     font-family: 'Poppins', sans-serif;
-    font-size: 3rem;
+    font-size: 4rem;
+    font-weight: 700;
     color: #191816;
   }
 
