--- a/news.html
+++ b/news.html
@@ -4,12 +4,12 @@
   <title>organiser</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="../js/news.js"></script>
-  <script src="../js/number.js"></script>
-  <script src="../js/baseUrl.js"></script>
-  <script src="../js/authenticate.js"></script>
-  <script src="../js/newsView.js"></script>
-  <link rel="stylesheet" href="../css/styles.css">
+  <script src="./js/news.js"></script>
+  <script src="./js/number.js"></script>
+  <script src="./js/baseUrl.js"></script>
+  <script src="./js/authenticate.js"></script>
+  <script src="./js/newsView.js"></script>
+  <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="../css/loader.css">
+<link rel="stylesheet" href="./css/loader.css">
   <script>
       window.onload=function(){
       newsDisp();
@@ -66,7 +66,7 @@
 </div> -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="../images/org.png"></a>
+  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
