--- a/pdfview2.html
+++ b/pdfview2.html
@@ -16,7 +16,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function(){
       const config = { 
-        documentId: 'b7881005-27a5-4aa2-8e45-bd74ce1bd207',
+        documentId: '84855c06-6ce7-448a-a590-031435336987',
         darkMode: true
       };
 
@@ -25,5 +25,5 @@
       });
     });
   </script>
-  <script type="text/javascript" src="../js/viewer.min.js?0e91f239215aff5c29b7"></script></body>
+ <script type="text/javascript" src="./js/viewer.min.js?0e91f239215aff5c29b7"></script></body>
 </html>
