--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Organiser - Voice of the nation. The oldest and most widely circulated nationali
      </div>
      <div class="row justify-content-center">             
           <div class="col-auto">
-              <p>© Copyright 2018 Ristorante Con Fusion</p>
+              <p>Powered by Humming Sparrow Digital Solution Pvt. Ltd.</p>
           </div>
      </div>
   </div>
