news image in mobile view

--- a/newsview.html
+++ b/newsview.html
@@ -33,6 +33,9 @@
   .resp {
     width: 100%;
   }
+  .newsimg{
+    height: 250px;
+  }
 }
     .navbar{
       background-color: #1A322B !important;
