--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
   <script src="./js/authenticate.js"></script>
   <script src="./js/newsView.js"></script>
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/newloader.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -101,11 +102,8 @@
 <!-- loader -->
 
 
-<div class="loader-wrapper" id="loader">
-  <span class="loader" style="
-margin-top: 35%;
-margin-left: 50%;    height: 31px;
-width: 31px;"><span class="loader-inner"></span></span>
+<div id="loading">
+  
 </div>
 
 <!-- loader -->
