--- a/news.html
+++ b/news.html
@@ -231,7 +231,9 @@ Organiser - Voice of the nation. The oldest and most widely circulated nationali
   </div>
 </footer>
 <!-- footer -->
-
+<script>
+    setTimeout(hideLoader,2500);
+</script>
 </body>
 </html>
 
