--- a/newsview.html
+++ b/newsview.html
@@ -11,6 +11,7 @@
   <script src="./js/authenticate.js"></script>
   <script src="./js/newsView.js"></script>
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/newloader.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -101,13 +102,13 @@
 
 <!-- loader -->
 
-
-<div class="loader-wrapper" id="loader">
+<div id="loading"></div>
+<!-- <div class="loader-wrapper" id="loader">
   <span class="loader" style="
 margin-top: 35%;
 margin-left: 50%;    height: 31px;
 width: 31px;"><span class="loader-inner"></span></span>
-</div>
+</div> -->
 
 <!-- loader -->
 
@@ -184,11 +185,7 @@ width: 31px;"><span class="loader-inner"></span></span>
     
 </div>
 
-<script>
-  setTimeout(function(){
-                document.getElementById("loader").style.display='none';
-            }, 3000)
-</script>
+
 
 
 
@@ -242,7 +239,9 @@ Organiser - Voice of the nation. The oldest and most widely circulated nationali
   </div>
 </footer>
 <!-- footer -->
-
+<script>
+  setTimeout(hideLoader,2500);
+</script>
 </body>
 </html>
 
