mag mobile view

--- a/magazine.html
+++ b/magazine.html
@@ -30,10 +30,12 @@
 
   }
 
-  /* .respMag{
-    width:50% !important;
-    margin-left: 30%;
-  } */
+  .respMag{
+    width:75% !important;
+    display:block;
+    margin:auto;
+  }
+
 }
 
     .navbar{
@@ -49,16 +51,7 @@
     .dfont{
       font-family: 'Yusei Magic', sans-serif;
     }
-  .fakeimg {
-    height: 300px;
-    width: 500px;
-    background: #aaa;
-  }
-  .fakeimg2 {
-    height: 200px;
-    width: 250px;
-    background: #aaa;
-  }
+
 * {
   box-sizing: border-box;
 }
@@ -91,7 +84,7 @@
 </div> -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.png"></a>
+  <a class="navbar-brand " style="padding-top: 10px;" href="index.html"><img src="./images/org.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -139,13 +132,10 @@ width: 31px;"><span class="loader-inner"></span></span>
     </div>
     <br>
     <div class="col-sm-8" style="padding-left: 5%;" >
-        <div class="row11">
-          <div class="col-sm-4"><h4 class="hfont" style="text-align: center;">Panchjanya</h4><a href="pdfview1.html"><img src="./images/panch.JPG" alt="organiser" style="width:100%;height:250px;"></a><p style="text-align: center;" class="datefont">2020-12-27</p>
+          <div class="col-sm-4"><h4 class="hfont" style="text-align: center;">Panchjanya</h4><div><a href="pdfview1.html"><img class="respMag" src="./images/panch.JPG" alt="organiser" style="width:100%;height:250px;"></a></div><p style="text-align: center;" class="datefont">27-12-2020</p>
           </div>  
-          <div class="col-sm-4"><h4 class="hfont" style="text-align: center;">Organiser</h4><a href="pdfview2.html"><img src="./images/organiser.JPG" alt="organiser" style="width:100%;height:250px;"></a><p style="text-align: center;" class="datefont">2020-12-20</p>
+          <div class="col-sm-4"><h4 class="hfont" style="text-align: center;">Organiser</h4><div><a href="pdfview2.html"><img class="respMag" src="./images/organiser.JPG" alt="organiser" style="width:100%;height:250px;"></a></div><p style="text-align: center;" class="datefont">20-12-2020</p>
           </div>
-    </div>
-  </div>
 </div>
 </div>
 
