--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ width: 31px;"><span class="loader-inner"></span></span>
   
     
  
-  <div class="row news-add">
+  <div class="news-add">
     
    
   </div>
