--- a/magazine.html
+++ b/magazine.html
@@ -136,6 +136,7 @@ width: 31px;"><span class="loader-inner"></span></span>
           </div>  
           <div class="col-sm-4"><h4 class="hfont" style="text-align: center;">Organiser</h4><div><a href="pdfview2.html"><img class="respMag" src="./images/organiser.JPG" alt="organiser" style="width:100%;height:250px;"></a></div><p style="text-align: center;" class="datefont">20-12-2020</p>
           </div>
+      </div>
 </div>
 </div>
 
@@ -163,7 +164,7 @@ width: 31px;"><span class="loader-inner"></span></span>
 <!-- footer -->
 <hr>
 <!-- footer -->
-<footer class="footer">
+<footer  class="footer">
   <div class="container">
       <div class="row justify-content-center">             
           <div class="col-sm-4 text-center">
