login logut navbar

--- a/index.html
+++ b/index.html
@@ -102,12 +102,14 @@
        
     </ul>
   </div>  
-       <ul class="nav navbar-nav topnav-right" id="collapsibleNavbar">
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">  
+         <ul class="nav navbar-nav topnav-right" id="collapsibleNavbar">
         <li class="nav-item">
         <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a>
         <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
       </li>
     </ul> 
+  </div>
 </nav>
 <!-- loader -->
 
