--- a/magazine.html
+++ b/magazine.html
@@ -103,7 +103,7 @@
     </ul>
   </div>  
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="nav navbar-nav topnav-right" >
+    <ul style="float:right;" class="nav navbar-nav topnav-right" >
       <li class="nav-item">
       <!-- <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a> -->
       <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
