--- a/magazine.html
+++ b/magazine.html
@@ -91,6 +91,9 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> Subscription</a>
+      </li> 
+      <li class="nav-item">
         <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
       </li>
       <li class="nav-item">
