--- a/subscription.html
+++ b/subscription.html
@@ -240,7 +240,7 @@
       </div>
 
       <div class="row justify-content-center mt-4">
-        <div class="col-10">
+        <div style="font-family: Verdana, Geneva, Tahoma, sans-serif;" class="col-10">
           <table style="width:100%">
               <caption class="subscribe rounded fontt" style="caption-side: top; text-align: center;">
                 Subscription Details
