--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> Subscription</a>
-      </li>  
+        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
+      </li>   
       <li class="nav-item">
         <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
       </li>
@@ -108,7 +108,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">  
          <ul style="float:right;" class="nav navbar-nav topnav-right" id="collapsibleNavbar">
         <li class="nav-item">
-        <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a>
+        <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn"  style="margin-right: 10px;margin-left: 15px;">Login</a>
         <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
       </li>
     </ul> 
