--- a/video.html
+++ b/video.html
@@ -70,6 +70,9 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
+      </li>   
+      <li class="nav-item">
         <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
       </li>
       <li class="nav-item">
@@ -82,7 +85,7 @@
     </ul>
   </div>  
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="nav navbar-nav topnav-right" >
+    <ul style="float:right;" class="nav navbar-nav topnav-right" >
       <li class="nav-item">
       <!-- <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a> -->
       <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
