--- a/subscription.html
+++ b/subscription.html
@@ -34,7 +34,7 @@
     width: 100%;
   }
   .tablewidth{
-    width: 60% !important;
+    width: 92% !important;
     margin: auto;
   }
   .tdbreak{
@@ -218,7 +218,7 @@ padding-right: 10px;
 
       </div>
       <div class="col-sm-5 pr-0">
-        <img class="subimg rounded-circle mt-2 " src="./images/user-icon.png">
+        <img class="subimg rounded-circle mt-2 " src="./images/avatar.png">
         <div class="mt-3 fontt user1">
         
         </div>
