--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bitter:ital@1&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   
   <script>
     window.onload=function(){
@@ -55,15 +57,28 @@
       
     }
     .fontt{
-    font-family: 'Abril Fatface', cursive;
+      font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
+    font-weight: 600;
+    color: #ef6306;
+
+  }
+  .btn-color{
+    background-color:  #ef6306;
+    width: 100%;
+    color:white;
   }
     .content{
     font-family: 'Bitter', serif;
     font-size: 1.5rem;
-    text-align: justify;
    }
-
+.bordertop{
+  border-radius: 15px;
+  border-top: 4px solid #ED6206;
+  background-color: #F2F2F2;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
   .body
   {
     padding-right: 0px;
@@ -77,8 +92,8 @@
 .navbar-brand {float:none;}
 .footer{
   width: 100%;
-  bottom: 0;
-  position: fixed;
+  bottom: -140px;
+  position: relative;
 }
   </style>
 </head>
@@ -109,43 +124,29 @@ width: 31px;"><span class="loader-inner"></span></span>
 <!-- loader -->
 
 
-<div class="container" style="margin-top:30px">
-  
+<div class="container" style="margin-top:30px"> 
     <div class="row justify-content-center">
-        <div class="col-sm-5">
-            <div>
+        <div class="col-sm-5 mt-5">
+            <div class="fontt">
                 Login
             </div>
-            <div class="border">
-
-                
-                <div class="form-row">
-                    <div class="form-group col-sm-6">
-                   <label class="sr-only" for="exampleInputEmail3"> Enter Phone Number</label>
-                  <input type="text" id="phone" class="form-control form-control-sm mr-1" placeholder="enter phone number" >
+            <div class="bordertop">
+                <div class="form-row justify-content-center mt-4">
+                    <div class="form-group col-sm-8 mt-3 mb-1" style="width: 80%;">
+                      <label for="phone" class="content">Enter Phone Number</label>
+                       <input type="text" id="phone" class="form-control form-control-sm mr-1">
+                       <button type="button" class="btn btn-color mt-2 content" onclick="authenticate()" id="otp">Get otp</button>
                     </div>
-                    <div class="form-group col-sm-4">
+                    <div class="form-group col-sm-8" style="width: 80%;">
                       <label class="sr-only" for="exampleInputEmail3">Enter OTP</label>
-                  <input type="text" id="otp1" class="form-control form-control-sm mr-1" placeholder="enter OTP">
+                      <input type="text" id="otp1" class="form-control form-control-sm mr-1" placeholder="enter OTP">
+                      <button type="button" class="btn btn-color mt-2 content" id="button" onclick="otp()">Login</button>
                     </div>
                 </div>
-                <div class="form-row">
-                  <button type="button" class="btn btn-primary btn-sm ml-1" onclick="authenticate()" id="otp">Get otp</button>
-                  <button type="button" class="btn btn-primary btn-sm ml-1" id="button" onclick="otp()">Login</button>
-                </div>
-
-
-
-
-
-
-            </div>
+              </div>
 
         </div>
-
     </div>
- 
-   
 </div>
 <hr>
 <!-- footer -->
