--- a/video.html
+++ b/video.html
@@ -70,8 +70,8 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> Subscription</a>
-      </li> 
+        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
+      </li>   
       <li class="nav-item">
         <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
       </li>
