--- a/magazine.html
+++ b/magazine.html
@@ -94,6 +94,9 @@
         <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
       </li>   
       <li class="nav-item">
+        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
+      </li>   
+      <li class="nav-item">
         <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
       </li>
       <li class="nav-item">
