fade in loginpage

--- a/indexbackup.html
+++ b/indexbackup.html
@@ -28,6 +28,7 @@
   
   <script>
     window.onload=function(){
+      window.location="index.html";
       document.getElementById("button").style.display='none';
       document.getElementById("otp1").style.display='none';
       // document.getElementById("loader").style.display='block';
